--- a/404.html
+++ b/404.html
@@ -245,7 +245,7 @@
     <!--/Modal Body-->
 </div>
 <!--  /Login form -->
-
+<!-- sample -->
 <script src="js/vendor/jquery-1.9.1.min.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
