--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </a>
-                <a id="logo" class="pull-left" href="index.html"></a>
+                <a id="logo" class="pull-left" href="index.html"><h1>D K MANDAPAM</h1></a>
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
                         <li class="active"><a href="index.html">Home</a></li>
@@ -81,9 +81,9 @@
             <div class="sl-slide item1" data-orientation="horizontal" data-slice1-rotation="-25" data-slice2-rotation="-25" data-slice1-scale="2" data-slice2-scale="2">
                 <div class="sl-slide-inner">
                     <div class="container">
-                        <img class="pull-right" src="images/sample/slider/img1.png" alt="" />
-                        <h2>Creative Ideas</h2>
-                        <h3 class="gap">Tincidunt condimentum eros</h3>
+                        <img class="pull-right" src="images/indian_marriage2.png" alt="" height="600"/>
+                        <h2>MARRIAGE</h2>
+                        <h3 class="gap">Made in Heaven</h3>
                         <a class="btn btn-large btn-transparent" href="#">Learn More</a>
                     </div>
                 </div>
